breakout styles, fix mobile view, adjust spacing of sections

--- a/sass/grayscale.scss
+++ b/sass/grayscale.scss
@@ -2,6 +2,7 @@
 @import "colors";
 @import "variables";
 @import "mixins";
+@import "nav";
 @import "buttons";
 
 body {
@@ -64,6 +65,7 @@ a {
     right: 0;
     height: 50px;
     width: 50px;
+    z-index: 1030;
     &:before {
         font-family: FontAwesome;
         font-size: 1.5em;
@@ -72,74 +74,6 @@ a {
         position: relative;
         top: 11px;
         left: 17px;
-    }
-}
-
-.navbar-custom {
-    font-family: "Overpass",Helvetica,Arial,sans-serif; //alternate
-    background-color: $blue-300;
-    border-bottom: 1px solid rgba($white, 0.3);
-    margin-bottom: 0;
-    text-transform: uppercase;
-    .navbar-toggle {
-        font-size: 16px;
-        color: $white;
-        padding: 4px 6px;
-        &:focus,
-        &:active {
-            outline: none;
-        }
-    }
-    .navbar-brand {
-        font-weight: 700;
-        &:focus {
-            outline: none;
-        }
-    }
-    a {
-        color: $white;
-    }
-    .nav {
-        li {
-            a {
-                transition: background .3s ease-in-out;
-                    -webkit-transition: background .3s ease-in-out;
-                    -moz-transition: background .3s ease-in-out;
-                &:hover {
-                    background-color: transparent;
-                    color: rgba($white, 0.8);
-                    outline: none;
-                }
-                &:focus,
-                &:active {
-                    background-color: transparent;
-                    outline: none;
-                }
-            }
-            &.active {
-                outline: none;
-                a {
-                    background-color: rgba($white, 0.3);
-                    &:hover {
-                        color: $white;
-                    }
-                }
-            }
-        }
-    }
-    @media(min-width:768px) {
-        background: transparent;
-        border-bottom: none;
-        letter-spacing: 1px;
-        padding: 20px 0;
-        transition: background .5s ease-in-out,padding .5s ease-in-out;
-            -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
-            -moz-transition: background .5s ease-in-out,padding .5s ease-in-out;
-        &.top-nav-collapse {
-            background: $blue-300;
-            border-bottom: 1px solid rgba($white, 0.3);
-            padding: 0;
-        }
     }
 }
 
@@ -213,51 +147,40 @@ a {
     }
 }
 
-.content-section {
-    height: 100%;
-    padding-top: 100px;
+.portfolio-section {
+    color: $white;
+    padding-top: 200px;
+    width: 100%;
+    height: auto;
 }
 
-.portfolio-section {
+.contact-section {
+    background-color: $black;
+    background-size: cover;
+        -webkit-background-size: cover;
+        -moz-background-size: cover;
+        -o-background-size: cover;
+    color: $white;
+    padding-top: 200px;
+    padding-bottom: 200px;
+    width: 100%;
+}
+
+#about {
+    padding-top: 200px;
+    padding-bottom: 200px;
+}
+#portfolio {
     background: url(../img/SC_water.jpg) no-repeat center center scroll;
     background-color: $black;
     background-size: cover;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
-    color: $white;
-    padding: 50px 0;
-    width: 100%;
-    height: 100%;
+    padding-bottom: 200px;
 }
-
-.contact-section {
-    //background: url(../img/SC_water.jpg) no-repeat center center scroll;
-    background-color: $black;
-    background-size: cover;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-    color: $white;
-    padding: 50px 0;
-    width: 100%;
-    height: 100%;
-}
-
-@media(min-width:767px) {
-    // .content-section {
-    //     padding-top: 250px;
-    // }
-
-    #about, #portfolio, #contact {
-       height: 100%;
-       padding-top: 250px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
+.download-section {
+    padding: 100px 0;
 }
 
 footer {
